--- a/client/index.html
+++ b/client/index.html
@@ -57,6 +57,12 @@
 <script src="js/plugins/oclazyload/dist/ocLazyLoad.min.js"></script>
 <script src="js/ui-router/angular-ui-router.min.js"></script>
 <script src="js/bootstrap/ui-bootstrap-tpls-0.12.0.min.js"></script>
+<script src="js/bower_components/leaflet/dist/leaflet.js"></script>
+<script src="js/bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.min.js"></script>
+
+<!-- External Third-Party -->
+<script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script>
+
 
 <!-- Anglar App Script -->
 <script src="js/app.js"></script>
