--- a/client/index.html
+++ b/client/index.html
@@ -1,15 +1,7 @@
-<!--
-* INSPINIA - Responsive Admin Theme
-* Copyright 2015 Webapplayers.com
-* Version 1.9
-*
--->
-
 <!DOCTYPE html>
 <html ng-app="victimas">
 
 <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -54,6 +46,7 @@
 
 <!-- Main Angular scripts-->
 <script src="js/angular/angular.min.js"></script>
+<script src="js/angular/angular-resource.min.js"></script>
 <script src="js/plugins/oclazyload/dist/ocLazyLoad.min.js"></script>
 <script src="js/ui-router/angular-ui-router.min.js"></script>
 <script src="js/bootstrap/ui-bootstrap-tpls-0.12.0.min.js"></script>
@@ -61,10 +54,14 @@
 <script src="js/bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.min.js"></script>
 
 <!-- External Third-Party -->
+<script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.5.0/lodash.min.js'></script>
 <script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script>
 
 
-<!-- Anglar App Script -->
+<!-- LoopBack ReST Service to Model -->
+<script src="js/lb-services.js"></script>
+
+<!-- Angular App -->
 <script src="js/app.js"></script>
 <script src="js/config.js"></script>
 <script src="js/directives.js"></script>
