--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,8 @@
     <!-- Page title set in pageTitle directive -->
     <title page-title></title>
 
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/dc/1.7.0/dc.css" rel="stylesheet">
+
     <!-- Font awesome -->
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
 
@@ -18,6 +20,12 @@
     <link href="css/animate.css" rel="stylesheet">
     <link id="loadBefore" href="css/style.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
+
+    <style>
+        #histograma-casos g.y {
+            display: none;
+        }
+    </style>
 </head>
 
 <!-- ControllerAs syntax -->
@@ -56,7 +64,9 @@
 <!-- External Third-Party -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.5.0/lodash.min.js'></script>
 <script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script>
-
+<script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.11/crossfilter.min.js'></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/dc/1.7.0/dc.min.js'></script>
 
 <!-- LoopBack ReST Service to Model -->
 <script src="js/lb-services.js"></script>
