Splitting sub-sections into separate controllers; pie charts now also respond to filters

--- a/client/index.html
+++ b/client/index.html
@@ -61,16 +61,18 @@
 
 
 <!-- LoopBack ReST Service to Model -->
-<script src="js/lb-services.js"></script>
+<script src="js/services/lb-services.js"></script>
 
 <!-- Angular App -->
 <script src="js/app.js"></script>
 <script src="js/config.js"></script>
-<script src="js/directives.js"></script>
-<script src="js/controllers.js"></script>
-<script src="js/services.js"></script>
-<script src="js/victimas.controllers.js"></script>
-<script src="js/dataview.controllers.js"></script>
+<script src="js/directives/directives.js"></script>
+<script src="js/controllers/controllers.js"></script>
+<script src="js/services/services.js"></script>
+<script src="js/controllers/victimas.js"></script>
+<script src="js/controllers/map.js"></script>
+<script src="js/controllers/stats.js"></script>
+<script src="js/directives/dataview.js"></script>
 
 </body>
 </html>
